--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://CHH02.github.io/FullStack-Part2-countries",
+  "homepage": "https://CHH02.github.io/FullStack-countries",
   "name": "countries",
   "private": true,
   "version": "0.0.0",
